syntax = "proto3";

package proto;

option go_package = "fullHistory";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// MiniblockMetadata is used to store information about a history transaction
message MiniblockMetadata {
    uint32 RcvShardID  = 1;
    uint32 SndShardID  = 2;
    uint64 Round       = 3;
    uint64 HeaderNonce = 4;
    bytes  HeaderHash  = 5;
    bytes  MbHash      = 6;
    bytes  Status      = 7;
    uint32 Epoch       = 8;
}

